fix(frontend/controller): set mobile font size to prevent controller icons overflowing

--- a/app/frontend/src/Controller/index.css
+++ b/app/frontend/src/Controller/index.css
@@ -6,6 +6,10 @@
   font-size: 1em;
 }
 
+.mobile .controller {
+  font-size: 0.875em;
+}
+
 .simple.controller * {
   transition: none !important;
 }
